--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -225,26 +225,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<and>
+					<or>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-					</and>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -254,27 +259,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-
-					<and>
+					<or>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
 							</test>
 						</adapt>
-					</and>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isFeature">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -284,29 +293,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<instanceof
-								value="org.eclipse.jgit.revwalk.RevCommit">
-						</instanceof>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<and>
+					<or>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-					</and>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -316,26 +327,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<and>
+					<or>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isRelease">
 							</test>
 						</adapt>
-					</and>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isRelease">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -349,8 +365,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
@@ -359,18 +375,27 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isFeature">
+								</test>
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.hasDefaultRemote">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -383,8 +408,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isRelease">
@@ -393,18 +418,27 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isRelease">
+								</test>
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.hasDefaultRemote">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -417,8 +451,8 @@
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isHotfix">
@@ -427,18 +461,27 @@
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isHotfix">
+								</test>
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.hasDefaultRemote">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -447,26 +490,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureTrackHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.hasDefaultRemote">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.hasDefaultRemote">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -476,26 +524,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureCheckoutHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<and>
+					<or>
 						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
 						</adapt>
-					</and>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -505,26 +558,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureRebaseHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isFeature">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isFeature">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -534,26 +592,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isInitialized">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -563,26 +626,31 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
 				<iterate
 						ifEmpty="false"
 						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
+					<or>
+						<adapt type="org.eclipse.jgit.lib.Repository">
 							<test
 									forcePluginActivation="true"
 									property="GitFlowRepository.isHotfix">
 							</test>
-						</and>
-					</adapt>
+						</adapt>
+						<adapt
+								type="org.eclipse.core.resources.IResource">
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isHotfix">
+								</test>
+							</adapt>
+						</adapt>
+					</or>
 				</iterate>
 			</enabledWhen>
 		</handler>
@@ -603,12 +671,26 @@
 		<definition
 				id="org.eclipse.egit.gitflow.ui.commandEnabled">
 			<or>
-				<instanceof
-						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
-				</instanceof>
-				<instanceof
-						value="org.eclipse.core.resources.IResource">
-				</instanceof>
+				<reference
+						definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+				</reference>
+				<and>
+					<count
+							value="1">
+					</count>
+					<iterate>
+						<and>
+							<instanceof
+									value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
+							</instanceof>
+							<not>
+								<test
+										property="GitRepository.isBare">
+								</test>
+							</not>
+						</and>
+					</iterate>
+				</and>
 			</or>
 		</definition>
 	</extension>
@@ -626,7 +708,13 @@
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
 	</extension>
-
+	<extension
+			point="org.eclipse.core.runtime.adapters">
+		<factory adaptableType="org.eclipse.jface.viewers.ISelection"
+				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
+			<adapter type="org.eclipse.jgit.lib.Repository"/>
+		</factory>
+	</extension>
 
 	<extension
 			point="org.eclipse.ui.menus">
@@ -637,20 +725,24 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate
-							ifEmpty="false"
-							operator="and">
-						<and>
-							<instanceof
-									value="org.eclipse.core.resources.IProject">
-							</instanceof>
+					<iterate>
+						<or>
 							<adapt type="org.eclipse.jgit.lib.Repository">
 								<test
 										forcePluginActivation="true"
 										property="GitFlowRepository.isInitialized">
 								</test>
 							</adapt>
-						</and>
+							<adapt
+									type="org.eclipse.core.resources.IResource">
+								<adapt type="org.eclipse.jgit.lib.Repository">
+									<test
+											forcePluginActivation="true"
+											property="GitFlowRepository.isInitialized">
+									</test>
+								</adapt>
+							</adapt>
+						</or>
 					</iterate>
 				</visibleWhen>
 				<command
