--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -751,6 +750,10 @@ PushCommitHandler_pushCommitTitle=Push Commit
 PushOperationUI_MultiRepositoriesDestinationString={0} repositories
 PushOperationUI_PushJobName=Push to {0}
 
+RepositoryJob_NullStatus=Internal error: job ''{0}'' returned a null status.
+RepositoryJobResultAction_RepositoryGone=Cannot find git repository ''{0}'' anymore: result cannot be shown.
+ShowPushResultAction_name=Show Push Result...
+
 PushWizard_cantConnectToAny=Can''t connect to any repository: {0}
 PushWizard_cantPrepareUpdatesMessage=Can't resolve ref specifications locally (local refs changed?) or create tracking ref update.
 PushWizard_cantPrepareUpdatesTitle=Preparing Ref Updates Error
@@ -930,6 +933,7 @@ PushToGerritWizard_Title=Push the current HEAD to Gerrit
 FetchAction_wrongURITitle=Corrupted Configuration
 FetchAction_wrongURIMessage=Remote repositories URIs configuration is corrupted.
 FetchOperationUI_FetchJobName=Fetch from {0}
+FetchOperationUI_ShowFetchResult=Show Fetch Result...
 
 FetchDestinationPage_PageTitle=Please select a fetch destination
 FetchDestinationPage_CouldNotGetBranchesMessage=Could not obtain tracking branches
@@ -1642,10 +1646,7 @@ RemoveOrDeleteRepositoryCommand_DialogTitle=Delete Repository
 RemoveOrDeleteRepositoryCommand_RemoveFromViewButton=Remove from View
 RenameBranchDialog_DialogMessage=Select a branch to rename
 RenameBranchDialog_DialogTitle=Rename a Branch
-RenameBranchDialog_NewNameInputDialogPrompt=Enter new name of the {0} branch. {1} will be prepended to the name you type
-RenameBranchDialog_RenameBranchDialogNewNameInputWindowTitle=New Branch Name
 RenameBranchDialog_RenameButtonLabel=&Rename
-RenameBranchDialog_RenameErrorMessage=Failed to rename branch {0} -> {1}, status={2}
 RenameBranchDialog_WindowTitle=Branch Rename
 RenameBranchOnCommitHandler_SelectBranchDialogMessage=Please select the branch you want to rename
 RenameBranchOnCommitHandler_SelectBranchDialogTitle=Rename Branch
