--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -328,9 +327,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
@@ -681,7 +680,6 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
-HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -1047,8 +1045,6 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
-CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
-CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
@@ -1363,7 +1359,6 @@ GitSelectRepositoryPage_AddButton=&Add...
 GitSelectRepositoryPage_AddTooltip=Add a Git repository from the local file system
 GitSelectRepositoryPage_NoRepoFoundMessage=No repositories found, please clone or add a repository
 GitSelectRepositoryPage_PageMessage=You can also clone a repository or add local repositories to the list
-GitSelectRepositoryPage_BareRepositoriesHidden=Bare repositories are not shown.
 GitSelectRepositoryPage_PageTitle=Select a Git Repository
 GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the list
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
