--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -328,9 +327,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
@@ -681,7 +680,6 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
-HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -965,6 +963,7 @@ FetchGerritChangePage_LocalBranchCheckout=Checkout new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
+FetchGerritChangePage_RunInBackground=&Run in background
 FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and checkout a &tag
@@ -1046,8 +1045,6 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
-CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
-CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
