--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -188,8 +188,7 @@ GitHistoryPage_FileNotInCommit={0} not in {1}
 GitHistoryPage_FileOrFolderPartOfGitDirMessage=File or folder {0} is part of the repository''s Git directory
 GitHistoryPage_FileType=File
 GitHistoryPage_FindMenuLabel=Find &Toolbar
-GitHistoryPage_FindShowTooltip=Show Find Toolbar ({0})
-GitHistoryPage_FindHideTooltip=Hide Find Toolbar ({0})
+GitHistoryPage_FindTooltip=Show Find Toolbar
 GitHistoryPage_FolderType=Folder
 GitHistoryPage_ModifyMenuLabel=Modi&fy
 GitHistoryPage_MultiResourcesType={0} resources
@@ -328,9 +327,9 @@ RebaseInteractiveStepActionToolBarProvider_EditText=Edit
 RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
 RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
-RebaseInteractiveStepActionToolBarProvider_MoveDownText=Down
+RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
 RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
-RebaseInteractiveStepActionToolBarProvider_MoveUpText=Up
+RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
 RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
 RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
@@ -652,7 +651,7 @@ ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' stat
 ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
-ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
+ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.\n\nDo you want to continue?
 ResetTargetSelectionDialog_ResetQuestion=Confirm Reset
 ResetTargetSelectionDialog_ResetTitle=Reset: {0}
 ResetTargetSelectionDialog_ResetTypeGroup=Reset type
@@ -681,7 +680,6 @@ HistoryPage_authorDateColumn=Authored Date
 HistoryPage_refreshJob=Reading history from Git repository ''{0}''
 
 HistoryPage_findbar_find=Search in history for ''{0}''
-HistoryPage_findbar_find_msg=Find
 HistoryPage_findbar_next=Next
 HistoryPage_findbar_previous=Previous
 HistoryPage_findbar_ignorecase=Ignore Case
@@ -756,8 +754,7 @@ RepositoryJob_NullStatus=Internal error: job ''{0}'' returned a null status.
 RepositoryJobResultAction_RepositoryGone=Cannot find git repository ''{0}'' anymore: result cannot be shown.
 ShowPushResultAction_name=Show Push Result...
 
-PushJob_cantConnectToAny=Can''t connect to any repository: {0}
-PushJob_unexpectedError=Unexpected error occurred.
+PushWizard_cantConnectToAny=Can''t connect to any repository: {0}
 PushWizard_cantPrepareUpdatesMessage=Can't resolve ref specifications locally (local refs changed?) or create tracking ref update.
 PushWizard_cantPrepareUpdatesTitle=Preparing Ref Updates Error
 PushWizard_cantSaveMessage=Couldn't save specified specifications in configuration file.
@@ -765,6 +762,7 @@ PushWizard_cantSaveTitle=Configuration Storage Warning
 PushWizard_jobName=Pushing to {0}
 PushWizard_missingRefsMessage=Ref specifications don't match any source ref (local refs changed?).
 PushWizard_missingRefsTitle=Missing Refs Error
+PushWizard_unexpectedError=Unexpected error occurred.
 PushWizard_windowTitleDefault=Push to Another Repository
 PushWizard_windowTitleWithDestination=Push to: {0}
 
@@ -1047,8 +1045,6 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
-CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
-CommittingPreferencePage_general=General
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
@@ -1103,11 +1099,10 @@ BranchOperationUI_CheckoutRemoteTrackingTitle=Check out remote-tracking branch
 BranchOperationUI_Continue=Continue
 BranchOperationUI_DetachedHeadTitle=Detached HEAD
 BranchOperationUI_DetachedHeadMessage=You are in the 'detached HEAD' state. This means that you don't have a local branch checked out.\n\nYou can look around, but it's not recommended to commit changes. The reason is that these commits would not be on any branch and would not be visible after checking out another branch.\n\nIf you want to make changes, create or checkout a local branch first.
-LaunchFinder_RunningLaunchDontShowAgain=Don't show this warning again
-LaunchFinder_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository.
-LaunchFinder_RunningLaunchTitle=Running Launch
-LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
-LaunchFinder_ContinueQuestion=Continue all the same?
+BranchOperationUI_RunningLaunchDontShowAgain=Don't show this warning again
+BranchOperationUI_RunningLaunchMessage=The launch configuration ''{0}'' is currently running and uses a project of this repository. Continue branch switch?
+BranchOperationUI_RunningLaunchTitle=Running Launch
+BranchOperationUI_SearchLaunchConfiguration=Search running launch configuration
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
@@ -1289,7 +1284,7 @@ DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
-DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
+DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored. Are you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
 Disconnect_disconnect=Disconnect
 
@@ -1866,7 +1861,6 @@ SubmoduleSyncCommand_SyncError=Submodule configuration sync error
 SubmoduleSyncCommand_Title=Synchronized submodule configuration
 SubmoduleUpdateCommand_Title=Updating submodules
 SubmoduleUpdateCommand_UpdateError=Submodule update error
-SubmoduleUpdateCommand_UncommittedChanges=Cannot Update Submodule Repository ''{0}''
 
 SynchronizeWithMenu_custom=&Custom...
 SynchronizeFetchJob_JobName=Fetching changes before synchronization launch
