--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -974,8 +974,6 @@ FetchResultDialog_ConfigureButton=&Configure...
 FetchResultDialog_labelEmptyResult=No ref to fetch from {0} - everything up to date.
 FetchResultDialog_labelNonEmptyResult=Fetched from {0}.
 FetchResultDialog_title=Fetch Results: {0}
-FetchResultDialog_HideDialog=&Don't show this dialog again
-FetchResultDialog_HideDialogButton=Hide this dialog in the future
 
 FetchResultTable_counterCommits=\ ({0})
 FetchResultTable_statusDetailCouldntLock=couldn't lock local tracking ref for update
@@ -1275,16 +1273,11 @@ RepositoriesViewLabelProvider_TagsNodeText=Tags
 
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
-DialogsPreferencePage_HideInfoGroupHeader=Show Dialog on Success
-DialogsPreferencePage_HideFetchInfoDialog=Fetch
-DialogsPreferencePage_HidePushInfoDialog=Push
-DialogsPreferencePage_HidePullInfoDialog=Pull
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
 DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
-DialogsPreferencePage_HideFetchSuccessCheckbox=Hide fetch result dialog
 DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
 DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
@@ -1366,6 +1359,7 @@ GitSelectRepositoryPage_AddButton=&Add...
 GitSelectRepositoryPage_AddTooltip=Add a Git repository from the local file system
 GitSelectRepositoryPage_NoRepoFoundMessage=No repositories found, please clone or add a repository
 GitSelectRepositoryPage_PageMessage=You can also clone a repository or add local repositories to the list
+GitSelectRepositoryPage_BareRepositoriesHidden=Bare repositories are not shown.
 GitSelectRepositoryPage_PageTitle=Select a Git Repository
 GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the list
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
