--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1045,6 +1045,7 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
+CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 
 DateFormatPreferencePage_title=Date Format
 DateFormatPreferencePage_formatChooser_label=&Format:
